# GeoLib

./: CMakeLists.txt  bug.points  test.points  test2.point  test2.points  test3.points
Doc/: Doxyfile
GeoLib/: CMakeLists.txt
GeoLib/gKit/: CMakeLists.txt
GeoLib/include/: Iterateur.h  Maillage2D.h  Mesh.h  Render.h  RenderMaillage2D.h  Sommet.h  Triangle.h  TriangleTopo.h  Triangulation.h  Triangulation2D.h  Triplet.h  Vector.h
GeoLib/src/: Iterateur.cpp  Maillage2D.cpp  Mesh.cpp  Render.cpp  RenderMaillage2D.cpp  Sommet.cpp  Triangle.cpp  TriangleTopo.cpp  Triangulation.cpp  Triangulation2D.cpp  Vector.cpp
GeoLibRefactor/: CMakeLists.txt
GeoLibRefactor/include/: Iterateur.h  Maillage.h  Render.h  ScatterPlot.h  Sommet.h  Triangle.h  Triangulation2D.h  Triplet.h  Vector.h  couple.h
GeoLibRefactor/src/: Iterateur.cpp  Maillage.cpp  Render.cpp  Sommet.cpp  Triangle.cpp  Triangulation2D.cpp  Vector.cpp  main.cpp
data/: shader1.glsl  shaderVoronoi.glsl
src/: Mesh.cpp  Mesh.h  Sommet.cpp  Sommet.h  Triangle.cpp  Triangle.h  TriangleTopo.cpp  TriangleTopo.h  Triangulation.cpp  Triangulation.h  Vector.cpp  Vector.h  main.cpp
test/: test.cpp  testVector.cpp
